[package]
name = "ffmn_nostd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = { version = "0.6.0", features = ["nightly", "executor-thread", "executor-interrupt"] }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4", "medium-ethernet", "proto-ipv4"
] }
# embassy-sync = "0.6.0"
embassy-time = { version = "0.3.2", features = ["generic-queue"] }
embedded-io-async = "0.6.1"
esp-alloc = "0.4.0"
esp-backtrace = { version = "0.14.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = ["esp32", "async", "log"] }
esp-hal-embassy = { version = "0.3.0", features = ["esp32", "log"] }
esp-println = { version = "0.11.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.9.1", features = ["esp32",
    "embassy-net", "async",
    "utils", "ipv4", "tcp", "udp", "dhcpv4",
    "wifi",
    # TODO: "ble" or "coex" for bluetooth or both bluetooth and wifi respectively
] }
log = { version = "0.4.21" }
static_cell = "2.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
# esp_wifi is broken with overflow-checks
overflow-checks = false

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
const-gen = "1.6.5"
