[package]
name = "ffmn_nostd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
common = { version = "0.1.0", path = "../common" }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["nightly", "executor-thread", "executor-interrupt"] }
embassy-net = { version = "0.6.0", features = [
    "tcp",
    "udp",
    "medium-ethernet", "proto-ipv6"
    # "dhcpv4",
] }
embassy-sync = "0.6.1"
embassy-time = { version = "0.4.0", features = ["generic-queue-64"] }
embedded-io-async = "0.6.1"
error_set = "0.7.0"
esp-alloc = "0.5.0"
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.22.0", features = ["esp32", "log"] }
esp-hal-embassy = { version = "0.5.0", features = ["esp32", "log"] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.11.0", features = ["esp32",
    # "utils",
    "wifi",
    "sniffer",
    "log",
    # "dump-packets",
    # TODO: "ble" or "coex" for bluetooth or both bluetooth and wifi respectively
] }
futures-lite = { version = "2.3.0", default-features = false, features = ["race"] }
heapless = "0.8.0"
ieee80211 = "0.5.0"
log = { version = "0.4.22" }
phf = { version = "0.11.2", default-features = false, features = ["macros"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
scroll = { version = "0.12.0", default-features = false, features = ["derive"]}
smoltcp = { version = "0.12.0", default-features = false, features = ["medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-raw"] }
static_cell = "2.1.0"
tree_mesh = { version = "0.1.0", path = "../tree_mesh" }
zerocopy = { version = "0.8.9", features = ["derive"] }

[patch.crates-io]
# change back to regular release after <https://github.com/Frostie314159/ieee80211-rs/pull/16>
ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs" }
# change back to regular release after <https://github.com/esp-rs/esp-hal/commit/571760884bf90240fdace3afdfb7f527194681aa>
esp-wifi = { git = "https://github.com/esp-rs/esp-hal" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal" }
# bitvec <1.1 isn't compatible with xtensa.
# See https://github.com/ferrilab/ferrilab/issues/1
bitvec = { version = ">=1.1", git = "https://github.com/ferrilab/ferrilab" }

[profile.dev]
opt-level = "s"
# esp_wifi is broken with overflow-checks
overflow-checks = false

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = false

[build-dependencies]
common = { version = "0.1.0", path = "../common", features = ["build"] }
const-gen = "1.6.5"

[features]
# Dump raw ieee80211 packets with sniffer. Decreases wifi performance.
dump-packets = []
