[package]
name = "ffmn_nostd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bt-hci = "0.2.0"
common = { version = "0.1.0", path = "../common" }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["nightly", "executor-thread", "executor-interrupt"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.6.0", features = [
    "log",
    "tcp",
    "udp",
    "medium-ethernet", "proto-ipv6",
    # "dhcpv4",
] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["generic-queue-64"] }
embedded-io-async = "0.6.1"
error_set = "0.7.0"
esp-alloc = "0.6.0"
esp-backtrace = { version = "0.15.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23.0", features = ["esp32", "log"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32", "log"] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.12.0", features = ["esp32",
    # "utils",
    "wifi", "sniffer",
    "ble",
    #"coex", # This actually seems to break coex? coex (bluetooth and wifi simultaneously) works fine without enabling this
    "log",
    # TODO: "ble" or "coex" for bluetooth or both bluetooth and wifi respectively
] }
heapless = "0.8.0"
ieee80211 = "0.5.0"
log = { version = "0.4.22" }
phf = { version = "0.11.2", default-features = false, features = ["macros"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
scroll = { version = "0.12.0", default-features = false, features = ["derive"]}
smoltcp = { version = "0.12.0", default-features = false, features = ["medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-raw", "log"] }
static_cell = "2.1.0"
tree_mesh = { version = "0.1.0", path = "../tree_mesh" }
#trouble-host = { git = "https://github.com/embassy-rs/trouble", version = "0.1.0", features = ["scan", "log"] }
# TODO, after changes in ffmn_nostd are upstreamed and espressif releases 2024 edition of toolchain, use upstream instead of this fork
trouble-host = { git = "https://github.com/Easyoakland/trouble/", version = "0.1.0", features = ["scan", "log"], branch = "ffmn_nostd" }
zerocopy = { version = "0.8.9", features = ["derive"] }

[patch.crates-io]
# change back to regular release after <https://github.com/Frostie314159/ieee80211-rs/pull/16>
ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs" }
# bitvec <1.1 isn't compatible with xtensa.
# See https://github.com/ferrilab/ferrilab/issues/1
# bitvec = { version = ">=1.1", git = "https://github.com/ferrilab/ferrilab" }

[profile.dev]
opt-level = "s"
# esp_wifi is broken with overflow-checks
overflow-checks = false

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "z"
overflow-checks = false

[build-dependencies]
common = { version = "0.1.0", path = "../common", features = ["build"] }
const-gen = "1.6.5"

[features]
# Dump raw ieee80211 packets with sniffer. Decreases wifi performance.
dump-packets = []
