[package]
name = "tree_mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common" }
critical-section = "1.2.0"
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "medium-ethernet", "proto-ipv6"
    # "dhcpv4",
] }
embassy-executor = { version = "0.6.3", features = ["nightly", "executor-thread", "executor-interrupt"] }
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.2", features = ["generic-queue"] }
embedded-io-async = "0.6.1"
error_set = "0.7.0"
futures-lite = { version = "2.3.0", default-features = false, features = ["race"] }
heapless = "0.8.0"
ieee80211 = "0.5.0"
log = "0.4.22"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
scroll = { version = "0.12.0", default-features = false, features = ["derive"]}
smoltcp = { version = "0.11.0", default-features = false, features = ["medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-raw"] }
static_cell = "2.1.0"
zerocopy = { version = "0.8.9", features = ["derive"] }

[patch.crates-io]
# change back to regular release after <https://github.com/Frostie314159/ieee80211-rs/pull/16>
ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs" }

[build-dependencies]
const-gen = "1.6.5"
common = { version = "0.1.0", path = "../common", features = ["build"] }

[features]
std = []