[package]
name = "tree_mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common" }
critical-section = "1.2.0"
embassy-executor = { version = "0.6.3", features = ["nightly", "executor-thread"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.5.0", features = [
    "tcp",
    "udp",
    "medium-ethernet", "proto-ipv6"
    # "dhcpv4",
] }
embassy-sync = "0.6.1"
embassy-time = "0.3.2"
embedded-io-async = "0.6.1"
error_set = "0.7.0"
heapless = "0.8.0"
ieee80211 = "0.5.0"
log = "0.4.22"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
scroll = { version = "0.12.0", default-features = false, features = ["derive"]}
smoltcp = { version = "0.12.0", default-features = false, features = ["medium-ethernet", "proto-ipv4", "proto-ipv6", "socket-raw"] }
static_cell = "2.1.0"
zerocopy = { version = "0.8.9", features = ["derive"] }
arbitrary = { version = "1.4.1", optional = true, default-features = false, features = ["derive"] }

[patch.crates-io]
# change back to regular release after <https://github.com/Frostie314159/ieee80211-rs/pull/16> and <https://github.com/Frostie314159/ieee80211-rs/pull/18>
ieee80211 = { git = "https://github.com/Frostie314159/ieee80211-rs" }


[build-dependencies]
const-gen = "1.6.5"
common = { version = "0.1.0", path = "../common", features = ["build"] }

[features]
default = []
alloc = []
std = ["alloc", "critical-section/std"]
arbitrary = ["dep:arbitrary", "std", "embassy-net/tcp"]

[dev-dependencies]
tree_mesh = { path = ".", features = ["arbitrary"] }

arbtest = { version = "0.3.1" }
embassy-executor = { version = "0.6.3", features = ["arch-std"] }
embassy-time = { version = "0.3.2", features = ["generic-queue"] }
# Set tick-rate to 1MHz on tests (each tick is 1us)
embassy-time-driver = { version = "0.1.0", features = ["tick-hz-1_000_000"] }
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
log = "0.4.22"
env_logger = "0.11.5"
smoltcp = { version = "0.12.0", default-features = false, features = ["verbose", "log"] }
petgraph = "0.6.5"
futures-test = "0.3.31"
serial_test = "3.2.0"
